--- a/Source/config.json
+++ b/Source/config.json
@@ -1,5 +1,13 @@
 {
     "state_district" : "Data\\Raw\\external\\dealer_active_inactive_report.xlsx",
     "raw_data_path_24" : "Data\\Raw\\Sales\\Sales-20-24.csv",
-    "raw_data_path_25" : "Data\\Raw\\Sales\\Sales-25(Jan-Apr).xlsx"
+    "raw_data_path_25" : "Data\\Raw\\Sales\\Sales-25(Jan-Apr).xlsx",
+    "data": "Data\\Processed\\data.csv",
+    "data_GJ" : "Data\\Processed\\data_GJ_25.csv",
+    "data_MH" : "Data\\Processed\\data_MH_25.csv",
+    "data_CG" : "Data\\Processed\\data_CG_25.csv",
+    "data_TN" : "Data\\Processed\\data_TN_25.csv",
+    "data_mahalaabh" : "Data\\Processed\\data_mahalaabh_25.csv",
+    "Figure": "Reports\\Figures"
+    
 }
